--- a/App/ProjektGruppeA/package.json
+++ b/App/ProjektGruppeA/package.json
@@ -23,7 +23,8 @@
     "patch-package": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "unsplash-js": "^7.0.18"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.20",
