--- a/App/ServerAppSchule/ServerAppSchule.csproj
+++ b/App/ServerAppSchule/ServerAppSchule.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BlazorDownloadFile" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.22" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.23" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.23" />
@@ -23,6 +24,7 @@
 		<PrivateAssets>all</PrivateAssets>
 	</PackageReference>
 	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
+	<PackageReference Include="MimeKit" Version="4.3.0" />
 	<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
 	<PackageReference Include="MudBlazor" Version="6.11.0" />
   </ItemGroup>
