--- a/App/ServerAppSchule/Properties/launchSettings.json
+++ b/App/ServerAppSchule/Properties/launchSettings.json
@@ -7,7 +7,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7274;http://localhost:5201"
+      "applicationUrl": "http://0.0.0.0:5000"
     },
     "IIS Express": {
       "commandName": "IISExpress",
