--- a/App/ServerAppSchule/ServerAppSchule.csproj
+++ b/App/ServerAppSchule/ServerAppSchule.csproj
@@ -30,8 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\Migrations\" />
-    <Folder Include="TestUpload\Service\" />
+    <Folder Include="TestUpload\Test\" />
   </ItemGroup>
 
 </Project>
