--- a/App/ServerAppSchule/ServerAppSchule.csproj
+++ b/App/ServerAppSchule/ServerAppSchule.csproj
@@ -29,10 +29,11 @@
 	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
 	<PackageReference Include="MimeKit" Version="4.3.0" />
 	<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
-	<PackageReference Include="MudBlazor" Version="6.11.1" />
+	<PackageReference Include="MudBlazor" Version="6.12.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="TestUpload\Service\TEst\" />
     <Folder Include="TestUpload\Test\" />
   </ItemGroup>
 
